--- a/charts/kproducer/templates/deployment.yaml
+++ b/charts/kproducer/templates/deployment.yaml
@@ -33,12 +33,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            - name: JAEGER_AGENT_HOST
-              value: {{ .Values.jaegerAgentHost | default "localhost" | quote}}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -47,12 +44,6 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 15
             timeoutSeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /readiness
-              port: http
-            initialDelaySeconds: 5
-            timeoutSeconds: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
